# we-love-you-all

./: .gitignore  Dockerfile  README.md  example_out.csv  split_data_images.py  train_yolov8-cls.py  xml_to_csv.py
app/: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml
app/api/: Dockerfile  api_service.py  docker-compose.yml  main.py  postgres.py  requirements.txt  settings.py
app/api/migrations/: env.py
app/api/models/: analyzer_model.py  user.py
app/api/repositorys/: base_repository.py  user.py
app/api/routers/: auth.py  routers.py
app/api/schemas/: analyzer_model.py  user.py
app/api/services/: auth.py
app/logger/: logging-dev.yml  utils.py
app/web/backend/: .env  (+6 more)
data_in/: Cam1-From09-23-00To10-03-25_Segment_0_x264_frame_74.xml
data_out/: 1.csv
datasets_processing/: Mock_attack_dataset_unzip_dataset.py  Mock_attack_fiftyone_YOLOv5_dataset_convert.py  Mock_attack_get_classes_labels.py  Mock_attack_to_Fiftyones_PascalVoc.py  YouTube-GDD_to_ultralytics_yolov8.py  YouTube-GDD_unzip_dataset.py  convert_dataset.py  data_utils.py  fiftyone_YOLOv5_dataset_convert.py  filter_by_annotation_existance.py  pyproject.toml
notebooks/: autodistil_annotate.ipynb  run yolo.ipynb  run_yolo.ipynb  run_yolo.py  shooter_pose_analis.ipynb  shooter_pose_landmarks_classifier.ipynb  split_video.ipynb  splitvideo.ipynb  tiled_inference.ipynb  transform classes.ipynb  yolo_nas_inference.ipynb  yolo_val.ipynb
src/data/: mediapipe_pose_estimator.py
src/train_cls/: split_data_images.py  train_yolov8-cls.py
yolo-tiling/: tile_yolo.py
(+42 files in other folders)
