[tool.poetry]
name = "cvat-datasets"
version = "0.1.0"
description = ""
authors = ["Anton Shiryaev <shiryaev_anton@cashalot.co>"]
readme = "README.md"
packages = [{include = "cvat_datasets"}]

[tool.poetry.dependencies]
python = "^3.10"
datumaro = "^1.3.2"
protobuf = "3.20"
python-dotenv = "^1.0.0"
pascal-voc = "^2.1.5"
ipykernel = "^6.26.0"
opencv-python = "^4.8.1.78"
gdown = "^4.7.1"
fiftyone = "^0.22.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
